[gd_scene load_steps=4 format=3 uid="uid://bbbei1nhl8bsl"]

[ext_resource type="Script" path="res://Prog52a.gd" id="1_newa0"]
[ext_resource type="LabelSettings" uid="uid://bvw7bu4yt4yb3" path="res://big_label.tres" id="2_mr6vu"]
[ext_resource type="Theme" uid="uid://b1of66lsewm4f" path="res://big_text.tres" id="3_oql7u"]

[node name="Prog52a" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_newa0")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 106.0
offset_top = 28.0
offset_right = 372.0
offset_bottom = 127.0
text = "Length:"
label_settings = ExtResource("2_mr6vu")

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 111.0
offset_top = 153.0
offset_right = 377.0
offset_bottom = 252.0
text = "Width:"
label_settings = ExtResource("2_mr6vu")

[node name="lblArea" type="Label" parent="."]
layout_mode = 0
offset_left = 111.0
offset_top = 272.0
offset_right = 949.0
offset_bottom = 371.0
text = "Area:"
label_settings = ExtResource("2_mr6vu")

[node name="lblPerim" type="Label" parent="."]
layout_mode = 0
offset_left = 106.0
offset_top = 396.0
offset_right = 944.0
offset_bottom = 495.0
text = "Perimeter:"
label_settings = ExtResource("2_mr6vu")

[node name="txtLen" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 286.0
offset_top = 18.0
offset_right = 613.0
offset_bottom = 113.0
theme = ExtResource("3_oql7u")

[node name="txtWid" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 287.0
offset_top = 133.0
offset_right = 614.0
offset_bottom = 228.0
theme = ExtResource("3_oql7u")

[node name="btnCalc" type="Button" parent="."]
layout_mode = 0
offset_left = 5.0
offset_top = 511.0
offset_right = 281.0
offset_bottom = 646.0
theme = ExtResource("3_oql7u")
text = "Calculate"

[node name="btnClear" type="Button" parent="."]
layout_mode = 0
offset_left = 431.0
offset_top = 516.0
offset_right = 707.0
offset_bottom = 651.0
theme = ExtResource("3_oql7u")
text = "Clear"

[node name="btnExit" type="Button" parent="."]
layout_mode = 0
offset_left = 866.0
offset_top = 508.0
offset_right = 1142.0
offset_bottom = 643.0
theme = ExtResource("3_oql7u")
text = "Exit"

[connection signal="pressed" from="btnCalc" to="." method="_on_btn_calc_pressed"]
[connection signal="pressed" from="btnClear" to="." method="_on_btn_clear_pressed"]
[connection signal="pressed" from="btnExit" to="." method="_on_btn_exit_pressed"]
